--- a/config.yaml
+++ b/config.yaml
@@ -7,34 +7,35 @@ variables:
       - rds-short-backup-retention-period
       - rds-no-auto-minor-version-upgrade
       - rds-db-publicly-accessible
-  AUDIT_AWS_RDS_ALERT_RECIPIENT:
+  AUDIT_AWS_ALERT_RECIPIENT:
     description: "Enter the email address(es) that will receive notifications. If more than one, separate each with a comma."
     required: true
     type: string
     default:
-  AUDIT_AWS_RDS_ALLOW_EMPTY:
+  AUDIT_AWS_ALLOW_EMPTY:
     description: "Would you like to receive empty reports? Options - true / false. Default is false."
     required: true
     type: string
     default: false
-  AUDIT_AWS_RDS_SEND_ON:
+  AUDIT_AWS_SEND_ON:
     description: "Send reports always or only when there is a change? Options - always / change. Default is change."
     required: true
     type: string
     default: "change"
-  AUDIT_AWS_RDS_REGIONS:
-    description: "List of AWS regions to check. Default is us-east-1,us-west-1,us-west-2."
+  AUDIT_AWS_REGIONS:
+    description: "List of AWS regions to check. Default is us-east-1,us-east-2,us-west-1,us-west-2,eu-west-1."
     required: true
     type: array
     default:
         - us-east-1
+        - us-east-2
         - us-west-1
         - us-west-2
+        - eu-west-1
 #       - ap-south-1
 #       - ap-northeast-1
 #       - ap-northeast-2
 #       - ap-southeast-1
 #       - ap-southeast-2
 #       - eu-central-1
-#       - eu-west-1
 #       - sa-east-1
