--- a/config.yaml
+++ b/config.yaml
@@ -9,14 +9,14 @@ variables:
       - rds-db-publicly-accessible
   AUDIT_AWS_RDS_ALERT_RECIPIENT:
     description: "Enter the email address(es) that will receive notifications. If more than one, separate each with a comma."
-    required: true
+    required: false
     type: string
     default:
   AUDIT_AWS_RDS_ALLOW_EMPTY:
     description: "Would you like to receive empty reports? Options - true / false. Default is false."
     required: true
     type: string
-    default: false
+    default: true
   AUDIT_AWS_RDS_SEND_ON:
     description: "Send reports always or only when there is a change? Options - always / change. Default is change."
     required: true
@@ -28,13 +28,15 @@ variables:
     type: array
     default:
         - us-east-1
+        - us-east-2
         - us-west-1
         - us-west-2
+        - eu-west-1
   AUDIT_AWS_RDS_FULL_JSON_REPORT:
     description: "Would you like to send the full JSON report? Options - notify / nothing. Default is notify."
     required: true
     type: string
-    default: "notify"
+    default: "nothing"
   AUDIT_AWS_RDS_ROLLUP_REPORT:
       description: "Would you like to send a Summary ELB report? Options - notify / nothing. Default is no / nothing."
       required: true
@@ -44,8 +46,8 @@ variables:
       description: notify or nothing
       required: true
       type: string
-      default: "nothing"
-  AUDIT_AWS_RDS_ALERT_NO_OWNER_RECIPIENT:
+      default: "notify"
+  AUDIT_AWS_RDS_ALERT_RECIPIENT_2:
       description: "Enter the email address(es) that will receive notifications for objects with no owner tag (Optional, only if owner tag is enabled)."
       required: false
       type: string
