change reporting defaults

--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,7 @@ variables:
       default: "notify"
   AUDIT_AWS_RDS_ALERT_RECIPIENT_2:
       description: "Enter the email address(es) that will receive notifications for objects with no owner tag (Optional, only if owner tag is enabled)."
-      required: false
+      required: true
       type: string
       default:
   AUDIT_AWS_RDS_OWNER_TAG:
