--- a/suppressions.yaml
+++ b/suppressions.yaml
@@ -1,4 +1,10 @@
 suppressions:
-  not-a-rule:
-    - not-an-object
-
+  rds-short-backup-retention-period:
+    - cc-581e59ffbd6-kubestg
+    - cc-57980ce2d13-kubedev
+  rds-no-auto-minor-version-upgrade:
+    - put-your-object-id-here
+  rds-db-publicly-accessible:
+    - put-your-object-id-here
+  rds-inventory:
+    - put-your-object-id-here
