--- a/suppressions.yaml
+++ b/suppressions.yaml
@@ -1,7 +1,8 @@
 suppressions:
   rds-short-backup-retention-period:
-    - cc-581e59ffbd6-kubestg
-    - cc-57980ce2d13-kubedev
+    - put-your-object-id-here
+#    - cc-581e59ffbd6-kubestg
+#    - cc-57980ce2d13-kubedev
   rds-no-auto-minor-version-upgrade:
     - put-your-object-id-here
   rds-db-publicly-accessible:
