--- a/tables.yaml
+++ b/tables.yaml
@@ -1,13 +1,16 @@
 rds-short-backup-retention-period:
   "AWS Region": "+__OBJECT__.violations.__RULE__.region+#https://+__OBJECT__.violations.__RULE__.region+.console.aws.amazon.com/cloudtrail/home?region=+__OBJECT__.violations.__RULE__.region+"
-#  "AWS Tags": "+__OBJECT__.tags+"
-#  "Trail Name": "__OBJECT__#https://+__OBJECT__.violations.__RULE__.region+.console.aws.amazon.com/cloudtrail/home?region=+__OBJECT__.violations.__RULE__.region+#/configuration/+__OBJECT__.violations.__RULE__.violating_object.0.object.trail_arn+"
+  "AWS Tags": "__TAGS__"
+  "RDS Instance": "__OBJECT__#https://console.aws.amazon.com/rds/home?region=+__OBJECT__.violations.__RULE__.region+#dbinstances:id=__OBJECT__;sf=all"
 rds-no-auto-minor-version-upgrade:
   "AWS Region": "+__OBJECT__.violations.__RULE__.region+#https://+__OBJECT__.violations.__RULE__.region+.console.aws.amazon.com/cloudtrail/home?region=+__OBJECT__.violations.__RULE__.region+"
-#  "AWS Tags": "+__OBJECT__.tags+"
+  "AWS Tags": "__TAGS__"
+  "RDS Instance": "__OBJECT__#https://console.aws.amazon.com/rds/home?region=+__OBJECT__.violations.__RULE__.region+#dbinstances:id=__OBJECT__;sf=all"
 rds-db-publicly-accessible:
   "AWS Region": "+__OBJECT__.violations.__RULE__.region+#https://+__OBJECT__.violations.__RULE__.region+.console.aws.amazon.com/cloudtrail/home?region=+__OBJECT__.violations.__RULE__.region+"
-#  "AWS Tags": "+__OBJECT__.tags+"
+  "AWS Tags": "__TAGS__"
+  "RDS Instance": "__OBJECT__#https://console.aws.amazon.com/rds/home?region=+__OBJECT__.violations.__RULE__.region+#dbinstances:id=__OBJECT__;sf=all"
 rds-inventory:
-  "AWS Region": "+__OBJECT__.violations.__RULE__.region+#https://+__OBJECT__.violations.__RULE__.region+.console.aws.amazon.com/cloudtrail/home?region=+__OBJECT__.violations.__RULE__.region+"
-#  "AWS Tags": "+__OBJECT__.tags+"
+   "AWS Region": "+__OBJECT__.violations.__RULE__.region+#https://+__OBJECT__.violations.__RULE__.region+.console.aws.amazon.com/cloudtrail/home?region=+__OBJECT__.violations.__RULE__.region+"
+   "AWS Tags": "__TAGS__"
+   "RDS Instance": "__OBJECT__#https://console.aws.amazon.com/rds/home?region=+__OBJECT__.violations.__RULE__.region+#dbinstances:id=__OBJECT__;sf=all"
