--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 variables:
   AUDIT_AWS_RDS_ALERT_LIST:
-    description: "Which alerts would you like to check for? (Default is all RDS alerts)"
+    description: "Which alerts would you like to check for? Default is all RDS alerts."
     required: true
     type: array
     default:
@@ -24,7 +24,7 @@ variables:
     type: string
     default: "change"
   AUDIT_AWS_RDS_REGIONS:
-    description: "List of AWS regions to check. Default is us-east-1,us-west-1,us-west-2."
+    description: "List of AWS regions to check. Default is us-east-1,us-east-2,us-west-1,us-west-2,eu-west-1."
     required: true
     type: array
     default:
@@ -34,17 +34,17 @@ variables:
         - us-west-2
         - eu-west-1
   AUDIT_AWS_RDS_ROLLUP_REPORT:
-      description: "Would you like to send a Summary ELB report? Options - notify / nothing. Default is no / nothing."
+      description: "Would you like to send a rollup RDS report? This is a short email that summarizes the number of checks performed and the number of violations found. Options - notify / nothing. Default is nothing."
       required: true
       type: string
       default: "nothing"
   AUDIT_AWS_RDS_HTML_REPORT:
-      description: notify or nothing
+      description: "Would you like to send a full RDS report? This is an email that details any violations found and includes a list of the violating cloud objects. Options - notify / nothing. Default is notify."
       required: true
       type: string
       default: "notify"
   AUDIT_AWS_RDS_OWNER_TAG:
-      description: "Enter an AWS tag whose value is an email address of owner of the ELB object. (Optional)"
+      description: "Enter an AWS tag whose value is an email address of owner of the RDS object. (Optional)"
       required: false
       type: string
       default: "NOT_A_TAG"
