--- a/suppressions.yaml
+++ b/suppressions.yaml
@@ -1,10 +1,11 @@
 rds-short-backup-retention-period:
-  - put-your-object-id-here
+  - cc-57980ce2d13-kubedev: "2017-01-10T00:00Z"
 rds-no-auto-minor-version-upgrade:
-  - put-your-object-id-here-1
-    - put-your-object-id-expiration-time-here
-  - put-your-object-id-here-2
+  - put-your-object-id-here-1: ""
+  - put-your-object-id-here-2: ""
 rds-db-publicly-accessible:
-  - put-your-object-id-here
+  - put-your-object-id-here: ""
 rds-inventory:
-  - put-your-object-id-here
+  - cc-57980ce2d13-kubedev: "2017-01-30T14:44Z"
+
+# YYYY-MM-DDTHH:mm:ss.sssZ
