--- a/suppression.yaml
+++ b/suppression.yaml
@@ -1,11 +1,14 @@
 rds-short-backup-retention-period:
-  - cc-57980ce2d13-kubedev: "2017-01-10T00:00Z"
+  - put-your-object-id-here: ""
 rds-no-auto-minor-version-upgrade:
   - put-your-object-id-here-1: ""
   - put-your-object-id-here-2: ""
 rds-db-publicly-accessible:
   - put-your-object-id-here: ""
 rds-inventory:
-  - cc-57980ce2d13-kubedev: "2017-01-30T14:44Z"
+  - put-your-object-id-here: ""
+
+#  - cc-57980ce2d13-kubedev: "2017-01-30T14:44Z"
+#  - cc-57980ce2d13-kubedev: "2017-01-10T00:00Z"
 
 # YYYY-MM-DDTHH:mm:ss.sssZ
