--- a/suppression.yaml
+++ b/suppression.yaml
@@ -1,12 +1,12 @@
 rds-short-backup-retention-period:
-  - put-your-object-id-here: ""
+  - cc-57980ce2d13-kubedev: "2017-01-30T14:44Z"
 rds-no-auto-minor-version-upgrade:
   - put-your-object-id-here-1: ""
   - put-your-object-id-here-2: ""
 rds-db-publicly-accessible:
   - put-your-object-id-here: ""
 rds-inventory:
-  - put-your-object-id-here: ""
+  - cc-57980ce2d13-kubedev: "2017-01-10T00:00Z"
 
 #  - cc-57980ce2d13-kubedev: "2017-01-30T14:44Z"
 #  - cc-57980ce2d13-kubedev: "2017-01-10T00:00Z"
